--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MASTER MD | Session</title>
     <meta property="og:image" content="https://i.imgur.com/HQ8CENR.jpeg">
-    <meta property="og:title" content="Queen Izumi">
+    <meta property="og:title" content="fenix-md">
 <style>
   body {
    display: flex;
@@ -337,25 +337,25 @@
       <h3 class="h">
         <span><span>
       </span></span></h3>
-        <input hidden type="text" name="value" value="queen-izumi-md">
+        <input hidden type="text" name="value" value="fenix-md">
         <br><br>
         <button onclick="location.href='/qr'" class="button">QR CODE</button>
         <br><br>
        <button onclick="location.href='/pair'" class="button">PAIR CODE</button>
         <br><br>
-      <button onclick="location.href='https://heroku.com/deploy?template=https://github.com/MrMasterOfc/MASTER-MD'" class="button">Deploy</button>
+      <button onclick="location.href='https://heroku.com/deploy?template=https://github.com/sabariy/fenix-md'" class="button">Deploy</button>
         <br><br>
-            <button onclick="location.href='https://wa.me/+94720797915'" class="button">OWNER</button>
+            <button onclick="location.href='https://wa.me/+919633605648'" class="button">OWNER</button>
        <br><br>
-       <button onclick="location.href='https://whatsapp.com/channel/0029VaWWZa1G3R3c4TPADo0M'" class="button">WHATSAPP CHANNEL</button>
+       <button onclick="location.href='https://chat.whatsapp.com/I8KWiuy62CvDw7Y492sYEy'" class="button">WHATSAPP CHANNEL</button>
          <br><br>
-        <button onclick="location.href='https://github.com/MrSahanOfcSL'" class="button">GITHUB</button>
+        <button onclick="location.href='https://github.com/sabariy'" class="button">GITHUB</button>
        <br><br>
     </form>
-      <button onclick="location.href='www.youtube.com/@sahanmaduwantha2006'" class="button">YOUTUBE</button>
+      <button onclick="location.href='www.youtube.com/@xoul_ser'" class="button">YOUTUBE</button>
     </div>
     <footer>
-       <p>© MASTER MD WHATSAPP USER BOT</p>
+       <p>© FENIX-MD WHATSAPP USER BOT</p>
     </footer>
   </body>
   </html>
