--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
       <h1 class="h">
         <centre>
         <span>SELECT <span>
-          <span>MASTER <span>
+          <span>FENIX <span>
                 <span>MD <span>
                  <span>INFO<span>
                 </centre>
