--- a/pair.html
+++ b/pair.html
@@ -128,11 +128,11 @@
         <div id="text">
           <i class="fa fa-user"></i>
           <p>
-            <h3 class="centered-text">MASTER MD</h3>
+            <h3 class="centered-text">FENIX MD</h3>
             <br>
             <h6>Enter your number with country code.</h6>
             <div class="input-container">
-                <input placeholder="+919633605648" type="number" id="number" placeholder="enter your phone number with country code" name="">
+                <input placeholder="+91963360****" type="number" id="number" placeholder="enter your phone number with country code" name="">
                 <button id="submit">enter</button>
               </div>
              
